# fastapi-mysql-sqlmodel

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py  security_route.py  user_route.py
app/core/: config.py  database.py  security.py
app/models/: base_model.py  user_model.py
app/schemas/: base_schema.py  user_schemas.py
app/service/: crud_service.py
migrations/: env.py
migrations/versions/: 20cbe9fcfbe9_alterando_tabela_de_usuarios.py  761ebb10741c_updating_table_users.py  9f902d629710_adicionando_campo_email.py  d6b5eed2e4c2_create_users_table.py
