[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
pytz = "^2024.1"
aiomysql = "^0.2.0"
cryptography = "^43.0.0"
pyjwt = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
blue = "^0.9.1"
isort = "^5.13.2"
ruff = "^0.5.5"
faker = "^26.0.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
dev = "fastapi dev app/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
